# examthing

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  examthing.bat
common/: CMakeLists.txt  CSVHelper.h  ET_Operator.h  ET_Parser.cpp  ET_Parser.h  etw_version.h  http_common.cpp  http_common.h  mm_file.h  targetver.h
examthing/: CMakeLists.txt  examthing.cpp
examthingweb/: CMakeLists.txt  defaultHTML.h  etw_args.cpp  etw_args.h  examthingweb.cpp
examthingweb/resources/: examthing.html
resources/: examthing.html
